# routines

./: .gitignore  CLAUDE.md  LICENSE  README.md  bootstrap.sh
.claude/skills/new-routine/: skill.md
.github/workflows/: ci.yml
openspec/changes/archive/2026-04-23-scheduler-mcp-server/: design.md  tasks.md
openspec/changes/scheduler-mcp-server/: proposal.md
openspec/changes/scheduler-mcp-server/specs/mcp-tools/: spec.md
routines/example/: PROMT.md  config.json  setup.bat  setup.sh
routines/example/envs/2026-04-23_11-19-37/: success.txt
routines/mytaskly-api-status/: PROMT.md  config.json  setup.sh
routines/notion-backlog-report/: PROMT.md  config.json
routines/notion-backlog-report/env/: setup.sh
routines/notizie/: PROMT.md  config.json
skills/: create-routine.md  new-routine.md  routine-config-reference.md
src/: README.md  main.py  pyproject.toml  routine_scheduler.py
src/cli/: create_routine.py  env_check.py  onboard.py  setup_config.py
src/mcp_server/: auth.py  dependencies.py  models.py  server.py
src/mcp_server/resources/: __init__.py  routine_resources.py
src/mcp_server/services/: log_service.py  routine_service.py  scheduler_service.py  task_service.py  validation_service.py
src/mcp_server/tools/: import_export_tools.py  monitoring_tools.py  routine_tools.py  scheduler_tools.py  task_tools.py  validation_tools.py
src/scheduler/: __init__.py  agent.py  app.py  constants.py  cron.py  docker_wrapper.sh  engine.py  loader.py  mcp_config.py  project_config.py  routine.py
src/tests/: test_api_trigger.py  test_mcp_config_runtime.py  test_mcp_resources.py  test_mcp_tools.py  test_routine.py  test_runtime_primitives.py  test_scheduler_sync.py  test_validation_service.py
(+1 files in other folders)
