[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.65",
    "croniter>=2.0.0",
    "rich>=14.1.0",
    "textual>=3.0.0",
]

[project.scripts]
env-check = "cli.env_check:main"
