[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.65",
    "croniter>=2.0.0",
    "rich>=14.1.0",
    "textual>=3.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
env-check = "cli.env_check:main"
setup-config = "cli.setup_config:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["cli", "scheduler"]
